--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,12 @@
 </head>
 <body>
 
+  <div id="template">
+    <h1 data-rv-text=":fullName < .firstName .lastName"></h1>
+    <h2 data-rv-text=".title"></h2>
+    <p data-rv-text=".description"></p>
+  </div>
+
   <script src="../vendor/jquery.js"></script>
   <script src="../vendor/underscore.js"></script>
   <script src="../vendor/backbone.js"></script>
