--- a/demo/index.html
+++ b/demo/index.html
@@ -8,42 +8,35 @@
   <div class="contacts-wrap">
 
     <div class="contacts-manager">
-      <ul class="contacts-list">
-        <li class="contact">
-          <p class="contact-name">Contact name</p>
-          <i data-rv-class-active=".isFavorite" class="icon-favorite">&#9733;</i>
-          <button class="btn btn-sm btn-danger">Delete</button>
-        </li>
-        <li class="contact active">
-          <p class="contact-name">Contact name</p>
-          <i data-rv-class-active=".isFavorite" class="icon-favorite active">&#9733;</i>
-          <button class="btn btn-sm btn-danger">Delete</button>
-        </li>
-        <li class="contact">
-          <p class="contact-name">Contact name</p>
-          <i data-rv-class-active=".isFavorite" class="icon-favorite">&#9733;</i>
-          <button class="btn btn-sm btn-danger">Delete</button>
-        </li>
-      </ul>
+      <ul id="contacts-list" class="contacts-list"></ul>
       <button class="btn btn-success">Add Contact</button>
     </div>
 
-    <div class="contact-manager" id="contact-manager">
-      <input type="text" class="contact-name" value="Contact name" />
-      <button class="btn">
-        <i data-rv-class-active=".isFavorite" class="icon-favorite active">&#9733;</i>
-        Favorite
-      </button>
-      <button class="btn btn-danger">Delete</button>
-    </div>
+    <div class="contact-manager" id="contact-manager"></div>
 
   </div>
+
+  <template id="contact-item">
+    <p class="contact-name" data-rv-text=":fullName < .firstName .lastName"></p>
+    <i data-rv-class-active=".isFavorite" class="icon-favorite">&#9733;</i>
+    <button class="btn btn-sm btn-danger">Delete</button>
+  </template>
+
+  <template id="contact-manager">
+    <input type="text" class="contact-name" value="Contact name" />
+    <button class="btn">
+      <i data-rv-class-active=".isFavorite" class="icon-favorite active">&#9733;</i>
+      Favorite
+    </button>
+    <button class="btn btn-danger">Delete</button>
+  </template>
 
   <script src="../vendor/jquery.js"></script>
   <script src="../vendor/underscore.js"></script>
   <script src="../vendor/backbone.js"></script>
   <script src="../vendor/rivets.js"></script>
   <script src="../src/backbone.rivetable.js"></script>
+  <script src="demo.js"></script>
 
 </body>
 </html>
