Add add/remove functionality

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
 
   <div class="contacts-wrap">
 
-    <div class="contacts-manager">
+    <div id="contacts-manager" class="contacts-manager">
       <ul id="contacts-list" class="contacts-list"></ul>
       <button class="btn btn-success">Add Contact</button>
     </div>
