--- a/demo/index.html
+++ b/demo/index.html
@@ -16,15 +16,16 @@
 
   </div>
 
-  <template id="contact-item">
+  <template id="contact-item-template">
     <p class="contact-name" data-rv-text=":fullName < .firstName .lastName"></p>
     <i data-rv-class-active=".isFavorite" class="icon-favorite">&#9733;</i>
     <button class="btn btn-sm btn-danger">Delete</button>
   </template>
 
-  <template id="contact-manager">
-    <input type="text" class="contact-name" value="Contact name" />
-    <button class="btn">
+  <template id="contact-manager-template">
+    <input type="text" class="contact-name" data-rv-value=".firstName" placeholder="First name" />
+    <input type="text" class="contact-name" data-rv-value=".lastName" placeholder="Last name" />
+    <button class="btn favorite-btn">
       <i data-rv-class-active=".isFavorite" class="icon-favorite active">&#9733;</i>
       Favorite
     </button>
